--- a/src/styles/Header.sass
+++ b/src/styles/Header.sass
@@ -1,21 +1,21 @@
+@import "Globals.sass"
+
 .top-menu
-  display: grid
-  grid-template-columns: repeat(12, 1fr)
-  background-color: #004444
-  color: white
+    display: grid
+    grid-template-columns: repeat(12, 1fr)
+    padding: 20px
+    background-color: rgba($app-theme-color, 0.5)
+    text-transform: uppercase
+    color: white
 
 .logo
-  grid-column: 1/3
-  background-color: #004444
+    grid-column: 1/3
 
 .search-menu
-  grid-column: 3/6
-  background-color: #004461
+    grid-column: 3/6
 
 .about-menu
-  grid-column: 11
-  background-color: yellowgreen
+    grid-column: 11
 
 .contact-us-menu
-  grid-column: 12
-  background-color: #0074D9
+    grid-column: 12
