--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -1,3 +1,15 @@
 body
-  text-align: center
-  color: black
+    text-align: center
+    color: black
+
+.container-page
+
+    max-width: 1260px
+    margin: 0 auto
+
+.home_container1
+    height: 460px
+
+.home_container2
+    height: 200px
+    background-color: yellowgreen
