--- a/src/styles/Footer.sass
+++ b/src/styles/Footer.sass
@@ -1,3 +1,5 @@
+@import 'Globals.css'
+
 .bottom-menu
-  background-color: #004444
-  color: white
+    background-color: $app-theme-color
+    color: white
