--- a/src/styles/Globals.sass
+++ b/src/styles/Globals.sass
@@ -1,5 +1,5 @@
-$app-theme-color: rgb(0,68,68)
-//$app-theme-color-transparent: #004444
+$app-theme-color: #386665
+//$app-theme-color-transparent: rgb(0,68,68)
 
 
 .button
