--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -3,12 +3,15 @@ body
     color: black
 
 .container-page
-
     max-width: 1260px
     margin: 0 auto
 
 .home_container1
-    height: 460px
+    img
+        position: relative
+        margin-top: -60px
+        width: 100%
+        z-index: -1
 
 .home_container2
     height: 200px
