--- a/src/styles/Header.sass
+++ b/src/styles/Header.sass
@@ -1,12 +1,20 @@
 @import "Globals.sass"
 
 .top-menu
+    position: relative
     display: grid
     grid-template-columns: repeat(12, 1fr)
-    padding: 20px
+    height: 60px
+    padding-right: 20px
+    padding-left: 20px
     background-color: rgba($app-theme-color, 0.5)
     text-transform: uppercase
     color: white
+
+    .header-item
+        position: relative
+        top: 50%
+        margin-top: -10px
 
 .logo
     grid-column: 1/3
