dates welcome screen

--- a/src/styles/Dateit.sass
+++ b/src/styles/Dateit.sass
@@ -1,9 +1,11 @@
+@import "Globals.sass"
+
 .left-content
     float: left
     width: 50%
     height: 100vh
-    background-color: #ff6f6f
+    background-color: $dates-theme-color
 
 .right-content
     height: 100vh
-    background-color: #fbcf61
+    background-color: $yellow
