--- a/src/styles/Globals.sass
+++ b/src/styles/Globals.sass
@@ -1,6 +1,8 @@
 $app-theme-color: #386665
 //$app-theme-color-transparent: rgb(0,68,68)
-
+$hot-pink : hotpink
+$dates-theme-color: #ff6f6f
+$yellow : #fbcf61
 
 .button
   cursor: pointer
