--- a/src/styles/DateBox.sass
+++ b/src/styles/DateBox.sass
@@ -4,6 +4,8 @@
     padding: 5px
     border: 1px solid $hot-pink
     cursor: pointer
+    .selected
+        background-color: $dates-theme-color
 
 .available:hover
     background-color: $dates-theme-color
