--- a/src/styles/Dateit.sass
+++ b/src/styles/Dateit.sass
@@ -1,11 +1,37 @@
 @import "Globals.sass"
 
+.content-box
+    width: 50%
+    height: 100vh
+    line-height: 100vh
+    span
+        display: inline-block
+        vertical-align: middle
+        line-height: normal
+
 .left-content
     float: left
     width: 50%
-    height: 100vh
     background-color: $dates-theme-color
+    .title
+        color: white
+        font-family: 'Euphoria Script'
+        font-size: 50px
+    span
+        display: inline-block
+        vertical-align: middle
+        line-height: normal
 
 .right-content
-    height: 100vh
+    position: relative
+    float: right
     background-color: $yellow
+    font-family: 'Asap'
+    .title
+        line-height: 25px
+        position: absolute
+        top: 10%
+        text-align: left
+        font-size: 20px
+        color: $dates-theme-color
+
