--- a/src/styles/DateBox.sass
+++ b/src/styles/DateBox.sass
@@ -4,7 +4,7 @@
     padding: 5px
     border: 1px solid $hot-pink
     cursor: pointer
-    .selected
+    &.selected
         background-color: $dates-theme-color
 
 .available:hover
