--- a/src/styles/Dateit.sass
+++ b/src/styles/Dateit.sass
@@ -1,5 +1,32 @@
 @import "Globals.sass"
 
+.login
+    height: 100vh
+    line-height: 100vh
+    background-color: $dates-theme-color
+    color: white
+    font-family: 'Euphoria Script'
+    span
+        display: inline-block
+        vertical-align: middle
+        line-height: normal
+        label
+            font-size: 30px
+        input
+            margin-left: 20px
+            margin-right: 10px
+            padding: 8px
+
+        .login-button
+            display: inline-block
+            padding: 8px
+            border-radius: 3px
+            color: black
+            background-color: $yellow
+            font-size: 15px
+            font-family: 'Asap'
+            cursor: pointer
+
 .content-box
     width: 50%
     height: 100vh
