--- a/src/styles/Dateit.sass
+++ b/src/styles/Dateit.sass
@@ -61,4 +61,15 @@
         text-align: left
         font-size: 20px
         color: $dates-theme-color
+    .send-button
+        padding: 8px
+        border-radius: 3px
+        color: white
+        background-color: $dates-theme-color
+        font-size: 15px
+        font-family: 'Asap'
+        cursor: pointer
+        &:hover
+            background-color: $dates-dark-color
+
 
