--- a/src/styles/Globals.sass
+++ b/src/styles/Globals.sass
@@ -2,6 +2,7 @@ $app-theme-color: #386665
 //$app-theme-color-transparent: rgb(0,68,68)
 $hot-pink : hotpink
 $dates-theme-color: #ff6f6f
+$dates-dark-color: #CC5959
 $yellow : #fbcf61
 
 .button
