Splitting Home and event pages

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -1,17 +1,19 @@
 body
     text-align: center
     color: black
+    font-family: 'Asap'
 
 .container-page
     max-width: 1260px
     margin: 0 auto
 
 .home_container1
-    img
-        position: relative
-        margin-top: -60px
-        width: 100%
-        z-index: -1
+    height: 200px
+    //img
+    //    position: relative
+    //    margin-top: -60px
+    //    width: 100%
+    //    z-index: -1
 
 .home_container2
     height: 200px
