--- a/src/styles/Header.sass
+++ b/src/styles/Header.sass
@@ -1,29 +1,22 @@
 @import "Globals.sass"
 
 .top-menu
-    position: relative
-    display: grid
-    grid-template-columns: repeat(12, 1fr)
-    height: 60px
-    padding-right: 20px
-    padding-left: 20px
-    background-color: rgba($app-theme-color, 0.5)
+    display: flex
+    padding: 20px
+    background-color: white
     text-transform: uppercase
-    color: white
+    color: $dates-theme-color
 
     .header-item
-        position: relative
-        top: 50%
-        margin-top: -10px
+        flex: 1
+        cursor: pointer
+        &:hover
+            color: $dates-dark-color
 
 .logo
-    grid-column: 1/3
 
-.search-menu
-    grid-column: 3/6
+.new-menu
 
 .about-menu
-    grid-column: 11
 
 .contact-us-menu
-    grid-column: 12
