--- a/src/styles/Dateit.sass
+++ b/src/styles/Dateit.sass
@@ -11,7 +11,7 @@
         vertical-align: middle
         line-height: normal
         label
-            font-size: 30px
+            font-size: $font-big
         input
             margin-left: 20px
             margin-right: 10px
@@ -23,7 +23,7 @@
             border-radius: 3px
             color: black
             background-color: $yellow
-            font-size: 15px
+            font-size: $font-small
             font-family: 'Asap'
             cursor: pointer
 
@@ -43,7 +43,7 @@
     .title
         color: white
         font-family: 'Euphoria Script'
-        font-size: 50px
+        font-size: $font-very-big
     span
         display: inline-block
         vertical-align: middle
@@ -59,17 +59,17 @@
         position: absolute
         top: 10%
         text-align: left
-        font-size: 20px
+        font-size: $font-medium
         color: $dates-theme-color
-    .send-button
-        padding: 8px
-        border-radius: 3px
-        color: white
-        background-color: $dates-theme-color
-        font-size: 15px
-        font-family: 'Asap'
-        cursor: pointer
-        &:hover
-            background-color: $dates-dark-color
+.send-button
+    padding: 8px
+    border-radius: 3px
+    color: white
+    background-color: $dates-theme-color
+    font-size: $font-small
+    font-family: 'Asap'
+    cursor: pointer
+    &:hover
+        background-color: $dates-dark-color
 
 
