--- a/src/styles/Globals.sass
+++ b/src/styles/Globals.sass
@@ -5,5 +5,10 @@ $dates-theme-color: #ff6f6f
 $dates-dark-color: #CC5959
 $yellow : #fbcf61
 
+$font-very-big : 50px
+$font-big : 30px
+$font-medium : 20px
+$font-small : 15px
+
 .button
   cursor: pointer
