--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -18,3 +18,14 @@ body
 .home_container2
     height: 200px
     background-color: yellowgreen
+
+.glass-panel
+    width: 100%
+    height: 100%
+    z-index: 10
+    position: fixed
+    top: 0
+    left: 0
+    margin: 0
+    padding: 0
+    background-color: rgba(255,255,255,0.3)
