Home screen UI changes

--- a/src/styles/Footer.sass
+++ b/src/styles/Footer.sass
@@ -1,5 +1,7 @@
 @import 'Globals.sass'
 
 .bottom-menu
-    background-color: $app-theme-color
+    position: absolute
+    bottom: 0
+    width: 100%
     color: white
