--- a/src/styles/Header.sass
+++ b/src/styles/Header.sass
@@ -3,8 +3,6 @@
 .top-menu
     display: flex
     padding: 20px
-    background-color: white
-    text-transform: uppercase
     color: $dates-theme-color
 
     .header-item
@@ -14,9 +12,9 @@
             color: $dates-dark-color
 
 .logo
-
-.new-menu
-
-.about-menu
+    text-align: left
+    font-size: 50px
+    font-family: 'Pacifico'
 
 .contact-us-menu
+    text-align: right
