Welcome message and go to event flow

--- a/src/styles/Home.sass
+++ b/src/styles/Home.sass
@@ -18,6 +18,7 @@
     font-size: 50px
     font-family: 'Pacifico'
     color: $dates-theme-color
+    cursor: pointer
     &:hover
         color: $dates-dark-color
 
@@ -29,3 +30,17 @@
     width: 100%
     z-index: -3
     background: url("../../src/assets/beerwithfriends.png") no-repeat center
+
+.events-box
+    color: white
+    .event-entry
+        width: 50%
+        margin: 10px auto
+        padding: 20px
+        box-sizing: border-box
+        background-color: rgba(56,56,56, 0.8)
+        text-align: left
+        cursor: pointer
+        font-size: 18px
+        &:hover
+            background-color: rgba(56,56,56, 1)
