--- a/src/styles/DateBox.sass
+++ b/src/styles/DateBox.sass
@@ -1,7 +1,7 @@
 @import "Globals.sass"
 
 .date-box
-    padding: 5px
+    padding: 8px 5px
     border: 1px solid $hot-pink
     cursor: pointer
     &.selected
@@ -9,5 +9,9 @@
 
 .available:hover
     background-color: $dates-theme-color
+table
+    width: 100%
 th
     padding: 5px
+td
+    padding: 2px
